--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^10.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
