--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
     "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^10.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
@@ -30,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9"
+    "vite": "^4.5.5"
   }
 }
